--- a/xmas.html
+++ b/xmas.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Happy Holidays!</title>
-        <link rel="stylesheet" href="style.css" type="text/css">
+        <link rel="stylesheet" href="xmas.css" type="text/css">
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="http://s3.amazonaws.com/codecademy-content/courses/holiday-cards/snowfall.min.js"></script>
 <script>
